Added a few more executive orders

--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -385,6 +385,12 @@ agencies:
   - date: 2025-02-17
     event: In a filing in "State of New Mexico v. Elon Musk," DOJ lawyers declare that Elon Musk is not the USDS Administrator, but just an advisor
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277463/gov.uscourts.dcd.277463.24.0_1.pdf
+  - date: 2025-02-19
+    event: Trump issues an executive order "Ending Taxpayer Subsidization of Open Borders" that instructs USDS to work with agencies to identify federal funding for immigrants and build up eligibility verification systems
+    source: https://www.whitehouse.gov/presidential-actions/2025/02/ending-taxpayer-subsidization-of-open-borders/
+  - date: 2025-02-19
+    event: Trump issues an executive order "Ensuring Lawful Governance and Implementing the President's Department of Government Efficiency Deregulatory Initiative" which requires agency heads to consult with DOGE teams on deregulatory efforts.
+    source: https://www.whitehouse.gov/presidential-actions/2025/02/ensuring-lawful-governance-and-implementing-the-presidents-department-of-government-efficiency-regulatory-initiative/
   - date: 2025-02-24
     event: In a hearing for "Alliance for Retired Americans v. Bessent," Judge Kollar-Kotelly repeatedly grills DOJ lawyers on who the USDS Administrator is
     source: https://www.lawfaremedia.org/article/who-is-running-the-u.s.-doge-service
