--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -561,6 +561,11 @@ agencies:
   - Ryan Wunderly
   - Thomas Krause
   events:
+  - date: 2025-01-08
+    event: The leader of the Trump transition team for the Treasury Department sends an email requesting that Thomas Krause be incuded on the "day 1 team, to lead on Fiscal Services modernization efforts."
+    named:
+    - Thomas Krause
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf#page=13
   - date: 2025-01-21
     event: Marko Elez starts at the Treasury Department and is granted full read-write access to systems
     named:
@@ -577,14 +582,57 @@ agencies:
   - date: 2025-01-24
     event: Trump fires the Inspector General for the Department of the Treasury in a late-night purge
     source: https://www.nytimes.com/interactive/2025/02/11/us/politics/trump-musk-doge-federal-workers.html
+  - date: 2025-01-29
+    event: A ticket for systems access is issued to give Marko Elez read-only access to the FROPK and SPR systems and read-write access to PAM
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-01-30
+    event: A ticket for systems access is corrected to note that Marko Elez should only have read-only access to the PAM system
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-01-31
+    event: A ticket for systems access is corrected to change Marko Elez's access from read-only to read-write
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-02-01
+    event: Another ticket is filed to remove write access from Marko Elez's profile in the PAM system
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-02-01
+    event: A ticket notes that Marko Elez's account was granted access to a DB2 database via remote SSH access
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-02-03
+    event: A ticket notes that Marko Elez was walked through access to the PAM system and confirms access was read only
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
   - date: 2025-02-04
     event: Treasury Secretary Scott Bessent writes a letter to Congress about Scott Krause having read-only access but doesn't mention Marko Elez
     named:
     - Thomas Krause
     source: https://www.wired.com/story/elon-musk-digital-coup-doge-data-ai/
+  - date: 2025-02-05
+    event: A ticket notes that Marko Elez was walked through read-only access to the SPS system
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
+  - date: 2025-02-05
+    event: Marko Elez is sent an email requesting that he sign the rules of behavior document for the Bureau of the Fiscal Service; it should've been signed when he received his laptop
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.44.1.pdf#page=36
   - date: 2025-02-06
     event: Judge Colleen Kollar-Kotelly rules that DOGE should only be granted read access to government systems
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.12.1_1.pdf
+  - date: 2025-02-06
+    event: A ticket is updated to note Marko Elez's account remote access via SSH to a DB2 database has been revoked
+    named:
+    - Marko Elez
+    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
   - date: 2025-02-06
     event: Marko Elez was discovered to inappropriately have read-write access on his laptop
     named:
