--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -988,6 +988,19 @@ agencies:
   sources:
   - https://www.nbcnews.com/politics/doge/doge-elon-musk-report-people-staff-what-we-know-news-rcna191260
 
+- name: Institute for Museum and Library Services
+  acronym: IMLS
+  events:
+  - date: 2025-03-14
+    event: Trump issues a new executive order proclaiming that the IMLS among other agencies must be reduced to statutory functions only
+    source: https://www.whitehouse.gov/presidential-actions/2025/03/continuing-the-reduction-of-the-federal-bureaucracy/
+  - date: 2025-03-19
+    event: Keith Sonderling, the Deputy Secretary of Labor, is named the acting director of the IMLS
+    source: https://bsky.app/profile/marisakabas.bsky.social/post/3lkr67qbqe22i
+  - date: 2025-03-20
+    event: DOGE arrives at IMLS HQ
+    source: https://bsky.app/profile/jsweetli.bsky.social/post/3lkt6r42d2k25
+
 - name: Inter-American Foundation
   acronym: IAF
   events:
