--- a/it_modernization/modernization.yaml
+++ b/it_modernization/modernization.yaml
@@ -698,6 +698,9 @@ agencies:
     named:
     - Keith Sonderling
     source: https://news.artnet.com/art-world/doge-imls-institute-museum-library-services-2623286
+  - date: 2025-03-20
+    event: Trump issues an executive order which explicitly includes an instruction that "the Secretary of Labor and the Secretary’s designees shall receive, to the maximum extent consistent with law, unfettered access to all unemployment data and related payment records, including all such data and records currently available to the Department of Labor’s Office of Inspector General."
+    source: https://www.whitehouse.gov/presidential-actions/2025/03/stopping-waste-fraud-and-abuse-by-eliminating-information-silos/
   cases:
   - name: AFL-CIO v. Dep’t of Labor (D.D.C.)
     description: A coalition of labor unions sued the Department of Labor (“DOL”), the Department of Government Efficiency (“DOGE”), and others seeking to block DOGE's access to internal DOL information systems on the basis that such access violates the Administrative Procedure Act, the Privacy Act, the Economy Act, and other federal laws. A federal court denied requests to temporarily block DOGE’s access while the case proceeds, but indicated further analysis was needed in particular on the Economy Act claims.
